<resources>
    <string name="app_name">PerfectWeatherAllYear</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="temperature_text">Temperature, C</string>
    <string name="precipitation_text">Precipitation, %</string>
    <string name="wind_text">Wind, m/sec</string>
    <string name="dayOfWeekTest">Monday</string>
    <string name="temperatureTest">+15</string>
    <string name="temperatureTitle">Temperature:</string>
    <string name="notification_title">Last weather</string>
    <string name="notification_text">Search for weather</string>
    <string name="notification_error">Couldn\'t get weather</string>
    <string name="update">Update weather</string>
</resources>