<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="hourWeather"
            type="com.example.perfectweatherallyear.model.HourWeather" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/itemWeatherMarginBottomLayout"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/hourTextView"
            android:layout_width="@dimen/day_of_week_textView"
            android:layout_height="wrap_content"
            android:text="@{hourWeather.time}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/dayOfWeekTest" />

        <TextView
            android:id="@+id/temperatureTitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@+id/hourTextView"
            app:layout_constraintTop_toTopOf="parent"
            android:paddingEnd="50dp"
            android:text="@string/temperatureTitle"/>

        <TextView
            android:id="@+id/temperatureTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@+id/temperatureTitleTextView"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@{hourWeather.temperature}"
            tools:text="@string/temperatureTest" />

        <TextView
            android:id="@+id/precipitationTitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/temperatureTitleTextView"
            app:layout_constraintTop_toBottomOf="@+id/temperatureTitleTextView"
            android:text="@string/precipitation_text"/>

        <TextView
            android:id="@+id/precipitationTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{hourWeather.precipitation}"
            app:layout_constraintStart_toStartOf="@+id/temperatureTextView"
            app:layout_constraintTop_toBottomOf="@+id/temperatureTextView"
            tools:text="10"/>

        <TextView
            android:id="@+id/windTitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/precipitationTitleTextView"
            app:layout_constraintTop_toBottomOf="@+id/precipitationTitleTextView"
            android:text="@string/precipitation_text"/>

        <TextView
            android:id="@+id/windTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{hourWeather.wind}"
            app:layout_constraintStart_toStartOf="@+id/temperatureTextView"
            app:layout_constraintTop_toBottomOf="@+id/precipitationTitleTextView"
            tools:text="10"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>