<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="detailViewModel"
            type="com.example.perfectweatherallyear.ui.detailWeather.DetailWeatherViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:paddingStart="10dp"
        android:paddingTop="10dp"
        tools:context=".ui.detailWeather.DetailWeatherFragment"
        tools:ignore="RtlSymmetry">

        <TextView
            android:id="@+id/temperatureNameTextView"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/temperature_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/temperatureTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{detailViewModel.temperature}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/temperatureNameTextView"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/precipitationNameTextView"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/precipitation_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/temperatureNameTextView" />

        <TextView
            android:id="@+id/precipitationTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{detailViewModel.precipitation}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/precipitationNameTextView"
            app:layout_constraintTop_toTopOf="@+id/precipitationNameTextView" />

        <TextView
            android:id="@+id/windNameTextView"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/wind_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/precipitationNameTextView" />

        <TextView
            android:id="@+id/windTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{detailViewModel.wind}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/windNameTextView"
            app:layout_constraintTop_toTopOf="@+id/windNameTextView" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>